Issue #2032489 by mrfelton: Form builder element list misaligned with shiny theme.

--- a/form_builder.css
+++ b/form_builder.css
@@ -289,6 +289,7 @@ div.form-builder-new-field span.progress {
 #form-builder-field-palette ul.form-builder-fields {
   width: 260px;
   padding: 0;
+  margin: 0;
 }
 
 #form-builder-field-palette ul li {
